# GreenComplAI

./: .env.example  .gitignore  .gitlab-ci.yml  .prettierrc  CHANGELOG.md  README.md  dangerfile.ts  data-1765192074523.csv  data-1765192117086.csv  docker-compose.yml  eslint.config.js  migrations.json  nx.json  package-lock.json  package.json  project.json  release.config.cjs  tsconfig.base.json
.github/: CODEOWNERS
.github/workflows/: archive.yaml  deploy.yaml  release.yaml  test_and_build.yaml
apps/bff/: .gitlab-ci.yml  Dockerfile  jest.config.ts  package.json  project.json  sonar-project.properties  tsconfig.app.json
apps/dpp-svc/: jest.config.ts  package.json  project.json  webpack.config.cjs
apps/dpp-svc-e2e/: jest.config.ts  project.json
apps/entity-management-svc/: .gitlab-ci.yml  Dockerfile  jest.config.ts  package.json  project.json  sonar-project.properties  webpack.config.js
apps/entity-management-svc-e2e/: jest.config.ts  project.json
apps/frontend/: .gitlab-ci.yml  Dockerfile  eslint.config.js  jest.config.ts  package.json  (+6 more)
apps/frontend-e2e/: eslint.config.js  playwright.config.ts
docker/: angular.dockerfile  nest.dockerfile  outlier-detection.dockerfile
documentation/: README.md
dpp/: README.md
pkg/outlier_detection/: .dockerignore  Dockerfile  README.md  api.py  database_client.py  main.py  models.py  prisma_config.py  product_outliers.py  product_outliers_db.py  pyproject.toml  rabbitmq_client.py  schema.prisma  setup.py
prisma/: data-import.ts  schema.prisma  seed.ts
scripts/: run-eslint-fix.sh  run-outlier-detection.sh
(+714 files in other folders)
