[project]
name = "outlier-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aio-pika>=9.5.5",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "pika>=1.3.2",
    "prisma>=0.15.0",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
]
