[project]
name = "outlier-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "prisma>=0.15.0",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
]

[tool.prisma]
schema = "../../prisma/schema.prisma"
